fix: extra spacing

--- a/style.css
+++ b/style.css
@@ -16,14 +16,12 @@ body {
 }
 
 section {
-  margin-top: 0;
   width: 100%;
   position: relative;
 }
 
 .navbar {
   background: #fd4a2b;
-  top: 0;
   width: 100%;
   position: fixed;
   display: flex;
@@ -126,7 +124,7 @@ section {
 .image-container {
   display: flex;
   width: 50%;
-  height: 100%;
+  height: 70vh;
   align-items: center;
   justify-content: center;
   position: relative;
